layout bugs

--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -8,14 +8,11 @@
 @Button-size-borderRadius: @size-borderRadius;
 
 .lucid-Button {
-	// Normalize SVG
-	#normalize > .svg();
 	// Mixins
 	.no-safari-flicker();
 	.box-sizing();
 	.gradient-animation(@featured-color-default-gradientStartColor, @featured-color-default-gradientEndColor);
 	cursor: pointer;
-	display: inline-block;
 	height: @Button-size-height;
 	border: 1px solid @featured-color-default-borderColor;
 	border-radius: @Button-size-borderRadius;
@@ -29,10 +26,13 @@
 	&:before {border-radius: @Button-size-borderRadius;}
 
 	& &-content {
-		display: inline;
+
 		> .lucid-Icon {
-			margin-left: -3px;
-			margin-right: -3px;
+			margin-left: -1em/2;
+			transition: color 0.1s, fill 0.1s;
+		}
+		> span {
+			transition: color 0.1s, fill 0.1s;
 		}
 	}
 
@@ -90,13 +90,15 @@
 			background: none;
 			color: @color-linkColorHover;
 			text-decoration: underline;
+			box-shadow: none;
+
+			.lucid-Icon { fill: @color-linkColorHover; }
 		}
 		&:active:before { opacity: 0;}
 
-		.lucid-Icon {
-			margin-right: 5px;
-			margin-top: -1px;
-		}
+		.lucid-Button-content{ line-height: 1em; }
+		.lucid-Icon { margin-right: 0.25em; }
+		.lucid-Icon + span { line-height: 1.4em; }
 	}
 
 	// Sizes
@@ -104,6 +106,7 @@
 		height: @Button-size-height-small;
 	}
 	&&-small {
+		height: @Button-size-height-small;
 		padding: 0 @Button-size-padding/1.5;
 	}
 	&&-large {
