--- a/src/docs/index.less
+++ b/src/docs/index.less
@@ -45,7 +45,7 @@ html {
 			flex-direction: column;
 
 			> article {
-				display: inline-block;
+				display: flex;
 				margin: 5px 0;
 
 				button:not(:last-child) { margin-right: 5px; }
